<resources>
    <!-- App -->
    <string name="app_name">MedVest+</string>
    <string name="hello_blank_fragment">faz alguma coisa, pfv</string>

    <!-- Login -->
    <string name="text_title_login_fragment">Login</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="hint_edit_password">Digite sua senha</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Senha</string>
    <string name="name_text">Nome</string>
    <string name="text_continue">Continue</string>
    <string name="text_button_register_login_fragment">Criar conta</string>
    <string name="text_button_recover_login_fragment">Recuperar conta</string>
    <string name="email_empty">Preencha seu email!</string>
    <string name="password_empty">Preencha a senha!</string>
    <string name="text_tela_login_entrar">Entrar</string>
    <string name="text_tela_login_insiradados">Insira seus dados para continuar</string>
    <string name="password_text2">Confirmar senha</string>
    <string name="nome_text">Digite seu nome</string>

    <!-- Registration -->
    <string name="text_title_toolbar_register_fragment">Criar conta</string>
    <string name="text_button_register_fragment">Enviar</string>
    <string name="email_empty_register_fragment">Preencha um e-mail válido.</string>
    <string name="password_empty_register_fragment">Preencha uma senha.</string>
    <string name="hint_edit_name">Digite o seu nome de usuário</string>
    <string name="hint_edit_name2">Preencha seu nome</string>
    <string name="text_button_registeraccount_fragment">Criar conta</string>
    <string name="text_salvar">Salvar</string>

    <!-- Recover Account -->
    <string name="text_info_recover_account_fragment">
        Informe seu email de cadastro para receber \n um link para alteração de senha.
    </string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_title_verifyfragment">Verificar a conta</string>
    <string name="text_button_recover_account_fragment">Deseja enviar um link para recuperação de senha?</string>

    <!-- Profile -->
    <string name="text_title_toolbar_profile">Tela de perfil</string>
    <string name="text_logout_profile">Sair da Conta</string>
    <string name="text_profile_salvar_tudo">Salvar Tudo</string>
    <string name="foto_atualizada">Foto atualizada!</string>
    <string name="erro_salvar_foto">Erro ao salvar foto!</string>
    <string name="text_profile_vestibulares_preferencia">Vestibulares de preferência:</string>
    <string name="text_enem">Enem</string>
    <string name="text_uerj">UERJ</string>
    <string name="text_unicamp">UNICAMP</string>
    <string name="text_usp">USP</string>

    <!-- Menu -->
    <string name="menu_quimica">Química</string>
    <string name="menu_fisica">Física</string>
    <string name="menu_biologia">Biologia</string>

    <!-- BottomSheet / Dialogs -->
    <string name="text_button_dialog_confirm_logout">Sair</string>
    <string name="text_title_dialog_confirm_logout">Confirmação</string>
    <string name="text_message_dialog_confirm_logout">Tem certeza que deseja sair?</string>
    <string name="text_button_dialog_cancel">Cancelar</string>

    <!-- Flashcards -->
    <string name="text_flashcards_menu_title">Seus Flashcards</string>
    <string name="text_flashcards_menu_biologia">Biologia</string>
    <string name="text_flashcards_menu_fisica">Física</string>
    <string name="text_flashcards_menu_quimica">Química</string>
    <string name="adicionar_novo_flashcard">Adicionar nova Matéria</string>
    <string name="adicionar_nova_materia">Criação de Matéria</string>
    <string name="hint_nome_criar_flashcard">Nome do Flashcard</string>
    <string name="hint_nome_criar_materia">Nome da Matéria</string>
    <string name="text_criar_flashcard_disciplina">Disciplina</string>
    <string name="text_salvar_materia_fragment_materia">Salvar</string>
    <string name="text_criar_flashcard_title">Criar Flashcard</string>
    <string name="text_criar_flashcard_frente">Frente</string>
    <string name="criar_flashcard_verso">Verso</string>
    <string name="hint_criar_flashcard_frente">Digite a frente do flashcard</string>
    <string name="hint_criar_flashcard_verso">Digite o verso do flashcard</string>
    <string name="text_without_flashcard">Nenhum flashcard criado ainda</string>
    <string name="text_materia">Matéria</string>

    <!-- Others -->
    <string name="text_simulados">Simulados</string>
    <string name="text_flashcards">Flashcards</string>
    <string name="text_tile_warning">Atenção</string>
    <string name="text_button_warning">Enviar</string>

    <!-- Ana Júlia conserta isso dd -->
    <string name="crair_flashcard_verso">Verso do flashcard</string>
    <string name="passord_text">Senha</string>
    <string name="password_empty_register_gragment">Não sei oq poderia ser isso</string>
    <string name="messagem">Messagem</string>
    <string name="t_tulo">Título</string>
    <string name="mensagem">Mensagem</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo">Título</string>
    <string name="mensagem2">Mensagem</string>
    <string name="cancelar2">Cancelar</string>
    <string name="confirmar2">Confirmar</string>
    <string name="mensagem3">Mensagem</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="fechar">Fechar</string>
    <string name="mat_ria">Matéria</string>
    <string name="ver_quest_es">Ver questões</string>
    <string name="ver_quest_es_desse_subt_pico">Ver questões desse subtópico</string>
    <string name="_0_0_respondidos">0 / 0 respondidos</string>
    <string name="errei">Errei</string>
    <string name="erros_0">Erros: 0</string>
    <string name="acertei">Acertei</string>
    <string name="acertos_0">Acertos: 0</string>
    <string name="simulados">Simulados</string>
    <string name="escolha_um_simulado_para_come_ar">Escolha um simulado para começar:</string>
    <string name="ou">ou</string>
    <string name="continue_com_google">Continue com Google</string>
    <string name="sem_notifica_es_no_momento">Sem notificações no momento</string>
    <string name="apagar_tudo">Apagar tudo</string>
    <string name="gen_tica">Genética</string>
    <string name="quest_o_1_de_1_0_0">Questão 1 de 1 ✓0 | ✗0</string>
    <string name="enunciado_da_quest_o">Enunciado da questão...</string>
    <string name="anterior">Anterior</string>
    <string name="confirmar3">Confirmar</string>
    <string name="pr_xima">Próxima</string>
    <string name="repita_sua_senha">Repita sua senha</string>
    <string name="ou1">ou</string>
    <string name="continue_com_google2">Continue com Google</string>
    <string name="escolha_suas_prefer_ncias_de_universidade">Escolha suas preferências de universidade</string>
    <string name="continuar">Continuar</string>
    <string name="simulados2">Simulados</string>
    <string name="escolha_um_vestibular_para_praticar">Escolha um vestibular para praticar:</string>
    <string name="anterior2">Anterior</string>
    <string name="pr_xima2">Próxima</string>
    <string name="quest_es">Questões</string>
    <string name="card_1_de_10">Card 1 de 10</string>
    <string name="acertos_0_erros_0">Acertos: 0 | Erros: 0</string>
    <string name="frente">Frente</string>
    <string name="verso">Verso</string>
    <string name="dif_cil">Difícil</string>
    <string name="bom">Bom</string>
    <string name="f_cil">Fácil</string>
    <string name="a">A</string>
    <string name="texto_da_alternativa">Texto da alternativa</string>
    <string name="a2">A</string>
    <string name="_05_05_2025">05/05/2025</string>
    <string name="fechar_notifica_o">Fechar notificação</string>
    <string name="mais_notifica_es">Mais notificações</string>
    <string name="_1_simulado_enem">1° Simulado ENEM</string>
    <string name="subt_pico">Subtópico</string>


</resources>
