<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TÍTULO -->
        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Meu Perfil"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingTop="12dp" />

        <!-- FOTO + BOTÃO EDITAR -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_foto_perfil"
                android:clipToOutline="true"
                android:background="@drawable/circle_shape"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/iconEditProfile"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignRight="@id/imageProfile"
                android:layout_alignBottom="@id/imageProfile"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_circle_profile"
                android:padding="8dp"
                android:src="@drawable/ic_edit" />

        </RelativeLayout>

        <!-- NOME -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_edit_name"
            android:paddingHorizontal="12dp"
            android:background="@drawable/edittext_background"
            android:textSize="16sp" />

        <!-- EMAIL -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingHorizontal="12dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/palavras"
            android:hint="@string/hint_edit_email"
            android:background="@drawable/edittext_background"

            android:enabled="false"
            android:focusable="false"
            android:cursorVisible="false" />

        <!-- VESTIBULARES -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_profile_vestibulares_preferencia"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <CheckBox
            android:id="@+id/rbUnicamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_unicamp"
            android:buttonTint="@color/checkbox_color"/>

        <CheckBox
            android:id="@+id/rbUsp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_usp"
            android:buttonTint="@color/checkbox_color"/>

        <CheckBox
            android:id="@+id/rbUerj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_uerj"
            android:buttonTint="@color/checkbox_color"/>

        <CheckBox
            android:id="@+id/rbEnem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_enem"
            android:buttonTint="@color/checkbox_color"/>

        <!-- BOTÃO SALVAR -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSalvarTudo"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/text_profile_salvar_tudo"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/green_500"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            style="@style/ButtonTheme" />

        <!-- BOTÃO SAIR - VERMELHO -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/text_logout_profile"
            android:textAllCaps="false"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/red_500"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            style="@style/ButtonThemeRed" />


    </LinearLayout>

</ScrollView>
