<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_bottomsheet">

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensagem3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:paddingBottom="12dp" />

    <!-- Botões de confirmação (SIM / NÃO) -->
    <LinearLayout
        android:id="@+id/confirmButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/btnSim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sim"
            android:textColor="@color/palavras"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="?attr/selectableItemBackground" />

        <TextView
            android:id="@+id/btnNao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/n_o"
            android:textColor="@color/palavras"
            android:textStyle="bold"
            android:padding="10dp"
            android:background="?attr/selectableItemBackground" />

    </LinearLayout>

    <!-- Botão padrão Fechar -->
    <TextView
        android:id="@+id/btnFechar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fechar"
        android:textColor="@color/palavras"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="?attr/selectableItemBackground" />

</LinearLayout>
