<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RecoverAccountFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/linearlayout1">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"
                android:text="@string/text_title_toolbar_recover_account_fragment"
                android:textColor="@color/palavras" />

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/medvest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MedVest+"
                android:textColor="@color/palavras"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearlayout2">

            <TextView
                android:id="@+id/textViewMensagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/text_info_recover_account_fragment"
                android:textAlignment="center"
                android:textColor="@color/palavras" />

            <TextView
                android:id="@+id/textviewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="@color/palavras"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_edit_email"
                style="@style/EditTextTheme"
                android:inputType="textEmailAddress" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_recover_account_fragment"
                style="@style/ButtonTheme"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </LinearLayout>



</ScrollView>